# multi_agents_harmony

./: .dockerignore  .flake8  .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  Makefile  README.md  README_BACKUP.md  README_UPDATED.md  demo_agents.py  docker-compose.yml  mypy.ini  pyproject.toml  test_agents.py  test_light.py  test_results.json  test_web_interface.py
.github/workflows/: ci.yml
config/: development.env
requirements/: base.txt  development.txt  production.txt
scripts/: check-docker.ps1  check-docker.sh  docker-start.sh  example.py  setup.py
src/agents/: __init__.py
src/agents/analysis/: __init__.py  analysis_agent.py
src/agents/base/: __init__.py  base_agent.py
src/agents/content/: __init__.py  content_agent.py
src/agents/quality/: __init__.py  quality_agent.py
src/agents/research/: __init__.py  research_agent.py
src/core/: __init__.py  config.py  gemini_client.py  orchestrator.py
src/interfaces/: __init__.py
src/interfaces/cli/: demo.py
src/interfaces/web/: app.py  app_backup.py  app_fixed.py  fix_js.js
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_basic.py
